added onclick func in HTML

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!--header: banner picture-->
     <div class="htop">
        <p>HEADER</p>
-        <button id="lang-no">NOR</button>
-        <button id="lang-en">ENG</button>
+        <button id="lang-no" onclick="lang_no()">NOR</button>
+        <button id="lang-en" onclick="lang_en()">ENG</button>
         <!--TODO: add banner-->
     </div>
 
