--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <!--e-mail modal-->
     <div class="email_modal">
         <div>
-            <h4 id="emodal-info">My contact information. Please click to copy</h4>
+            <h4 id="emodal-info">my contact information. Please click to copy</h4>
             <button class="close_button">&times;</button>
         </div>
-        <button class="copyText_button" id="c1" onclick="copyTextFunction(this.id)">Phone number</button>
-        <button class="copyText_button" id="c2" onclick="copyTextFunction(this.id)">E-mail</button>
-        <button class="copyText_button" id="c3" onclick="copyTextFunction(this.id)">Home address</button>
-        <button class="copyText_button" id="c4" onclick="copyTextFunction(this.id)">All contact information</button>
+        <button class="copyText_button" id="c1" onclick="copyTextFunction(this.id)">phone number</button>
+        <button class="copyText_button" id="c2" onclick="copyTextFunction(this.id)">e-mail</button>
+        <button class="copyText_button" id="c3" onclick="copyTextFunction(this.id)">home address</button>
+        <button class="copyText_button" id="c4" onclick="copyTextFunction(this.id)">all contact information</button>
     </div>
         
     <div class="column">
@@ -36,17 +36,17 @@
                 <img src="self-portrait_2.jpg" class="self_portrait" />
                 <!--information-->
                 <div class="text_boxes">
-                    <h4 id="info-col-nr">My phone number</h4>
+                    <h4 id="info-col-nr">my phone number</h4>
                     <p>41294755</p>
                 </div>
                 <!--information-->
                 <div class="text_boxes">
-                    <h4 id="info-col-sendMe">Send me a mail</h4>
+                    <h4 id="info-col-sendMe">send me a mail</h4>
                     <a href="mailto:sara.seacucumber@gmail.com"><p>sara.seacucumber@gmail.com</p></a>
                 </div>
                 <!--information-->
                 <div class="text_boxes">
-                    <button class="open_button"><h4 id="info-col-openModal">Copy my contact info</h4></button>
+                    <button class="open_button"><h4 id="info-col-openModal">copy my contact info</h4></button>
                 </div>
                 </div>
             </div>
@@ -54,21 +54,21 @@
         <div class="column aboutme_info">
             <div class="content_space">
                 <div class="text_boxes">
-                    <h3 id="info-col-aboutMe">ABOUT ME</h3>
-                    <p id="info-col-am-text">Information</p>
+                    <h3 id="info-col-aboutMe">about me</h3>
+                    <p id="info-col-am-text">information</p>
                 </div>
                 <div class="text_boxes">
-                    <h3 id="info-col-relEduc">RELEVANT EDUCATION</h3>
-                    <p id="info-col-re-text">Information</p>
+                    <h3 id="info-col-relEduc">relevant education</h3>
+                    <p id="info-col-re-text">information</p>
                     <div class="column">
                         <div>
-                            <a class="portf_button" href="https://github.com/SaraYohannes" target="_blank" id="portf_b_git">My github account</a>
+                            <a class="portf_button" href="https://github.com/SaraYohannes" target="_blank" id="portf_b_git">my github account</a>
                         </div>
                         <div>
-                            <a class="portf_button" href="https://www.nrk.no" target="_blank" id="portf_b_sketch">This is a sketchfab link?</a>
+                            <a class="portf_button" href="https://www.nrk.no" target="_blank" id="portf_b_sketch">my sketchfab account</a>
                         </div>
                         <div>
-                            <a class="portf_button" href="https://www.nrk.no" target="_blank" id="portf_b_devi">This is a deviantart link?</a>
+                            <a class="portf_button" href="https://www.nrk.no" target="_blank" id="portf_b_devi">my deviantart account</a>
                         </div>
                     </div>
                 </div>
@@ -78,15 +78,15 @@
         <div class="column project_info">
             <div class="content_space">
                 <div class="text_boxes">
-                    <h4 id="info-col-projectInfo">Project information</h4>
+                    <h4 id="info-col-projectInfo">project information</h4>
                 </div>
                 <a id="projectf_button">
                     <div class="text_boxes">
                         <div class="column">
                             <img src="Item_light_parafinlampe_UNUSED_v0.png" class="project_illustration" />
                             <div class="text_boxes">
-                                <h3 id="Project-githubPages">Homepage project</h3>
-                                <p id="Project-githubPages-description">Used to learn about HTML, CSS, and JavaScript. The result was a homepage which also serve as my resume</p>
+                                <h3 id="Project-githubPages">homepage</h3>
+                                <p id="Project-githubPages-description">used this project to learn about HTML, CSS, and JavaScript. The result was a homepage which also serve as my resume</p>
                             </div>
                         </div>
                     </div>
