gave buttons a div, w right: 150

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <!--header: banner picture-->
     <div class="htop">
        <p>HEADER</p>
-        <button id="lang-no" onclick="lang_no()">NOR</button>
-        <button id="lang-en" onclick="lang_en()">ENG</button>
+        <div style="right: 150px">
+            <button id="lang-no" onclick="lang_no()">NOR</button>
+            <button id="lang-en" onclick="lang_en()">ENG</button>
+        </div>
         <!--TODO: add banner-->
     </div>
 
