added lang_buttons id

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--header: banner picture-->
     <div class="htop">
        <p>HEADER</p>
-        <div style="float: right">
+        <div id="lang_buttons">
             <button id="lang-no" onclick="lang_no()">NOR</button>
             <button id="lang-en" onclick="lang_en()">ENG</button>
         </div>
