added class to language buttons

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="htop">
        <p>HEADER</p>
         <div id="lang_buttons">
-            <button id="lang-no" onclick="lang_no()">NOR</button>
-            <button id="lang-en" onclick="lang_en()">ENG</button>
+            <button class="lang_buttons" id="lang-no" onclick="lang_no()">NOR</button>
+            <button class="lang_buttons" id="lang-en" onclick="lang_en()">ENG</button>
         </div>
         <!--TODO: add banner-->
     </div>
