--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        <p>HEADER</p>
         <div id="lang_buttons">
             <button class="lang_buttons" id="lang-no" onclick="lang_no()">NOR</button>
-            <p>" | "</p>
+            <p style="display: inline-block"> | </p>
             <button class="lang_buttons" id="lang-en" onclick="lang_en()">ENG</button>
         </div>
         <!--TODO: add banner-->
