--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="htop">
        <p>HEADER</p>
         <div id="lang_buttons">
-            <button class="lang_buttons" id="lang-no" onclick="lang_no()">NOR</button>
+            <button class="button lang_buttons" id="lang-no" onclick="lang_no()">NOR</button>
             <p style="display: inline-block"> | </p>
-            <button class="lang_buttons" id="lang-en" onclick="lang_en()">ENG</button>
+            <button class="button lang_buttons" id="lang-en" onclick="lang_en()">ENG</button>
         </div>
         <!--TODO: add banner-->
     </div>
