--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!--header: banner picture-->
     <div class="htop">
-       <p>HEADER</p>
+       <!--<p>HEADER</p> <!--temp fill-->
         <div id="lang_buttons">
             <button id="lang-no" onclick="lang_no()">NOR</button>
             <p style="display: inline-block"> | </p>
