added justify-content to div

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="text_boxes">
                     <h3 id="info-col-relEduc">relevant education</h3>
                     <p id="info-col-re-text">information</p>
-                    <div class="column">
+                    <div class="column" style="justify-content:center">
                         <div>
                             <a class="portf_button" href="https://github.com/SaraYohannes" target="_blank" id="portf_b_git">my github account</a>
                         </div>
