--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                 <div class="text_boxes">
                     <h3 id="info-col-relEduc">relevant education</h3>
                     <p id="info-col-re-text">information</p>
-                    <div class="column" style="justify-content:center">
+                    <div class="column">
                         <div>
-                            <a class="portf_button" href="https://github.com/SaraYohannes" target="_blank" id="portf_b_git">my github account</a>
+                            <a class="portf_button" href="https://github.com/SaraYohannes" target="_blank" id="portf_b_git" style="display:inline-block">my github account</a>
                         </div>
                         <div>
                             <a class="portf_button" href="https://www.nrk.no" target="_blank" id="portf_b_sketch">my sketchfab account</a>
