--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <!--information-->
                 <div class="text_boxes">
-                    <button class="open_button"><h4 id="info-col-openModal">copy my contact info</h4></button>
+                    <button class="open_button"><h4 id="info-col-openModal" style="font-size: 1.2em">copy my contact info</h4></button>
                 </div>
                 </div>
             </div>
