--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <!--information-->
                 <div class="text_boxes">
-                    <button class="open_button" id="info-col-openModal"><p>copy my contact info</p></button>
+                    <button class="open_button" id="info-col-openModal"><h4>copy my contact info</h4></button>
                 </div>
                 </div>
             </div>
