testing charset added charset definition to .js src tag

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="content_space">
                 <div class="text_boxes">
                     <h3 id="info-col-aboutMe">about me</h3>
-                    <p id="info-col-am-text">information</p>
+                    <p id="info-col-am-text">testing æ, ø, å</p>
                 </div>
                 <div class="text_boxes">
                     <h3 id="info-col-relEduc">relevant education</h3>
@@ -116,6 +116,6 @@
     <!--footer - red-->
     <div class="footer">
     </div>
-    <script src="emailModal.js"></script> 
+    <script src="emailModal.js" charset="UTF-8"></script> 
 </body>
 </html>
