saved .js as UTF-8 w/o BOM

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="content_space">
                 <div class="text_boxes">
                     <h3 id="info-col-aboutMe">about me</h3>
-                    <p id="info-col-am-text">testing æ, ø, å</p>
+                    <p id="info-col-am-text">information</p>
                 </div>
                 <div class="text_boxes">
                     <h3 id="info-col-relEduc">relevant education</h3>
