updated mailto link

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <!--information-->
                 <div class="text_boxes">
                     <h4 id="info-col-sendMe">send me a mail</h4>
-                    <a href="mailto:sara.seacucumber@gmail.com"><p>sara.seacucumber@gmail.com</p></a>
+                    <a href="mailto:sara.seacucumber@gmail.com?subject=I%20would%20like%20to%20talk%20with%20you"><p>sara.seacucumber@gmail.com</p></a>
                 </div>
                 <!--information-->
                 <div class="text_boxes">
@@ -64,7 +64,7 @@
                     <h3 id="info-col-relEduc">relevant education</h3>
                     <p id="info-col-re-text">information</p>
                     <div class="column">                        
-                            <a class="portf_button" href="https://github.com/SaraYohannes?subject=I%20would%20like%20to%20talk%20with%20you" id="portf_b_git">my github account</a>                        
+                            <a class="portf_button" href="https://github.com/SaraYohannes" target="_blank" id="portf_b_git">my github account</a>                        
                             <a class="portf_button" href="https://www.nrk.no" target="_blank" id="portf_b_sketch">my sketchfab account</a>                        
                             <a class="portf_button" href="https://www.nrk.no" target="_blank" id="portf_b_devi">my deviantart account</a>                        
                     </div>
