styled html h4 email modal

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!--e-mail modal-->
     <div class="email_modal">
         <div>
-            <h4 id="emodal-info">my contact information. Please click to copy</h4>
+            <h4 id="emodal-info" style="display:inline-block">my contact information. Please click to copy</h4>
             <button class="close_button">&times;</button>
         </div>
         <button class="copyText_button" id="c1" onclick="copyTextFunction(this.id)">phone number</button>
