--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <h4 id="emodal-info" style="display:inline-block">my contact information. Please click to copy</h4>
             <button class="close_button">&times;</button>
         </div>
-        <button class="copyText_button" id="c1" onclick="copyTextFunction(this.id)">phone number</button>
-        <button class="copyText_button" id="c2" onclick="copyTextFunction(this.id)">e-mail</button>
-        <button class="copyText_button" id="c3" onclick="copyTextFunction(this.id)">home address</button>
-        <button class="copyText_button" id="c4" onclick="copyTextFunction(this.id)">all contact information</button>
+        <button class="copytext_button" id="c1" onclick="copyTextFunction(this.id)">phone number</button>
+        <button class="copytext_button" id="c2" onclick="copyTextFunction(this.id)">e-mail</button>
+        <button class="copytext_button" id="c3" onclick="copyTextFunction(this.id)">home address</button>
+        <button class="copytext_button" id="c4" onclick="copyTextFunction(this.id)">all contact information</button>
     </div>
         
     <div class="column">
